Fix anime card drop down clipping issues

--- a/app/assets/stylesheets/anime-discover.css.scss
+++ b/app/assets/stylesheets/anime-discover.css.scss
@@ -255,6 +255,7 @@
 
       .drop-button {
         font-size: 12px;
+        padding: 10px 0px;
 
         .selector {
           position: absolute;
@@ -328,7 +329,6 @@
   		text-align: center;
   		text-transform: uppercase;
   		font-size: 10px;
-  		padding: 8px 0px;
   		border-top: 1px solid #eee;
   		border-bottom: 1px solid #eee;
   	}
